--- a/index.html
+++ b/index.html
@@ -1,148 +1,129 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <!-- Global Site Tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107752770-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
 
-      gtag('config', 'UA-107752770-1');
+<head>
+  <!-- Global Site Tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-107752770-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-107752770-1");
     </script>
-    <title>Lindsay Dages</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/png" href="/coder.png"/>
-    <link rel="stylesheet" type="text/css" href="index.css">
-    <script src="https://use.fontawesome.com/cf39e837b4.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli|Ovo" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-mfizz/2.4.1/font-mfizz.css">
-    <meta name=“keywords” content=“lindsay,dages,dutton,Lindsay” />
-    <meta name="description" content="Lindsay Dages: Web Developer Portfolio" />
-  </head>
-<div class="border">
-  <div class="row">
-    <div class="main_headline">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <div class="title">
-              <h1 class="main_size left_align">Lindsay</h1>
-              <h1 class="main_size left_align">K.</h1>
-              <h1 class="main_size left_align">Dages</h1>
-            </div>
-          </div>
-          <div class="back">
-            <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAOsAAAAJDAxYjhiNGFkLTU2MDAtNDY3ZS05NDBhLTIzYTljMGZkMDA0Nw.jpg" alt="">
-          </div>
-        </div>
-      </div>
+  <title>Lindsay Dages</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/png" href="assets/coder.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="index.css" />
+  <meta name="“keywords”" content="“lindsay,dages,dutton,Lindsay”" />
+  <meta name="description" content="Lindsay Dages: Web Developer Portfolio" />
+  <script src="index.js"></script>
+</head>
+
+<body>
+  <section class="hero">
+    <div class="hero-inner">
+      <div class="hero-text"></div>
     </div>
-    <div class="p_column">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <div class="section projects">
-                <div class="content">
-                  <h1 class="secondary_size">
-                    Check Out My Projects!
-                  </h1>
-                </div>
-              </div>
-            </div>
-          <div class="back">
-            <div class="section projects">
-              <div class="content">
-                <ul>
-                  <span class='project-description'>a recipe search engine:</span>
-                  <li>
-                    <a href="https://github.com/space-jammers/vegme" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                    <a href="https://vegme.herokuapp.com/" target="_blank">VegMe</a>
-                  </li>
-                  <span class='project-description'>an open source dog  rescue app: </span>
-                  <li>
-                    <a href="https://github.com/ophrescue/RescueRails" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                    <a href="https://ophrescue.org/" target="_blank">RescueRails</a>
-                  </li>
-                  <span class='project-description'>a two player chess app:</span>
-                  <li>
-                    <a href="https://github.com/counterThreat/chess_app" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-                    <a href="https://firehose-chess-app.herokuapp.com/" target="_blank">Counter Threat</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="about">
-        <div class="section">
-          <article>
-            I am a web developer with experience
-            primarily in <b>Ruby on Rails</b> and <b>JavaScript</b>.
-            In addition to my years of billing and customer
-            experience, I have also held a leadership
-            position where I managed a team of six people and led daily huddles.
-            I love learning new technologies,
-            automating processes and smashing bugs <em>(only of the programmatic type, of course)</em>. Recently,
-            I contributed to an open source Rails application supporting a
-            local dog rescue and co-developed
-            a recipe search engine.
-            I am now looking to join a team that
-            values collaboration, honest feedback, and constant improvement.
-        </article>
-        </div>
-    </div>
-    <div class="sub_headline">
-      <div class="title">
-        <h1 class="sub_title"></h1>
-        <h1 class="sub_title"></h1>
-        <h1 class="sub_title">Web Developer</h1>
-      </div>
-    </div>
-    <div class="t_column">
-      <div class="flip-container">
-        <div class="flipper">
-          <div class="front">
-            <div class="section tools">
-              <div class="content">
-                <h1 class="secondary_size">
-                  Tools I Use
-                </h1>
-              </div>
-            </div>
-          </div>
-          <div class="back">
-              <div class="section tools">
-                <div class="content">
-                  <ul class="two_columns">
-                    <li>Ruby On Rails</li>
-                    <li>HTTP Requests</li>
-                    <li>Git</li>
-                    <li>JSON</li>
-                    <li>JQuery</li>
-                    <li>PostgreSQL</li>
-                    <li>RSpec</li>
-                    <li>Heroku</li>
-                    <li>CodeShip</li>
-                    <li>HTML/CSS</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-        </div>
-      </div>
-    </div>
+  </section>
+  <div class="arrow-container " id="arrowContainer">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 133.27 34.77">
+      <defs>
+        <style>
+          .a {
+            fill: rgba(241, 242, 242, .5);
+          }
+        </style>
+      </defs>
+      <polygon class="a" points="67.88 15.54 66.63 15.86 65.38 15.54 0 0 0 13.06 66.63 34.77 133.27 13.06 133.27 0 67.88 15.54" />
+    </svg>
   </div>
-  <div class="contact">
-    <div class="flex_contact">
-      <a href="https://www.linkedin.com/in/lindsaykdages/" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
-      <a href="https://github.com/lnzd17" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a>
-      <a href="mailto:lindsay.dages@outlook.com"><i class="fa fa-envelope-o fa-3x " aria-hidden="true"></i></a>
-    </div>
-  </div>
-</div>
+  <main>
+    <section class="summary" id="mySummary">
+      <h2>Hi, I'm Lindsay!</h2>
+      <p> I live in Brooklyn, but I'm orginally from Idaho (or basically another planet).</p>
+      <p> When I'm not coding you can find me enjoying sci-fi movies and books,
+        snuggling my cat Rockwell, and inventing recipes in my Brooklyn-sized kitchen.
+      </p>
+    </section>
+    <hr>
+    <section>
+      <h2>Tools I Use</h2>
+      <div class="tools-container">
+        <div>
+          <img src="assets/rails.svg" alt="Ruby On Rails" />
+          <div>
+            <img src="assets/react.svg" alt="React" />
+            <img src="assets/graphql.svg" alt="GraphQL" />
+            <img src="assets/typescript.svg" alt="TypeScript" />
+          </div>
+          <img src="assets/git.svg" alt="Git" />
+        </div>
+        <div>
+          <img src="assets/html5.svg" alt="HTML5" />
+          <img src="assets/css3.svg" alt="CSS3" />
+          <img src="assets/postgresql.svg" alt="PostgreSQL" />
+          <img src="assets/rspec.png" alt="RSpec" />
+        </div>
+      </div>
+    </section>
+    <hr>
+    <section class="experience">
+      <h2>My Experience</h2>
+      <div>
+        <h3>Feature Owner</h3>
+        <p>Owner of my company's chat feature. Implemented new visual design,
+          and added new features including: document upload,
+          pagination of messages/conversation list, and
+          created custom UI element for selecting chat participants.</p>
+      </div>
+      <div>
+        <h3>WebSocket Integration</h3>
+        <p>Leveraged GraphQL-Ruby, Action Cable, and Apollo Link to integrate WebSocket
+          real-time communication into my company’s chat feature. </p>
+      </div>
+      <div>
+        <h3>Style Guide Implementation</h3>
+        <p>Worked with designers to implement new designs based on custom style
+          guide for form inputs, fonts, and buttons.
+          Created button styles to accept modifier classes for different use cases.</p>
+      </div>
+      <div>
+        <h3>Infinite Scroll</h3>
+        <p>Improved load times with infinite scroll and pagination for large
+          resource lists throughout company’s application.
+          Utilized GraphQL mutations and React Waypoint library during this process.</p>
+      </div>
+      <div>
+        <h3>Migration To React/GraphQL</h3>
+        <p>A main contributor during a 5-month client side migration from ERB to React and GraphQL.
+          This improved the application’s load time performance, visual design and scalability.</p>
+      </div>
+    </section>
+    <hr>
+    <section>
+      <h2>Contact Me</h2>
+      <div class="contact-me-container">
+        <a href="https://www.linkedin.com/in/lindsaykdages/" target="_blank">
+          <img src="assets/linkedin.svg" alt="linkedin" />
+        </a>
+        <a href="https://github.com/lnzd17" target="_blank">
+          <img src="assets/github.svg" alt="github" />
+        </a>
+        <a href="mailto:lindsay.dages@outlook.com">
+          <img src="assets/email.svg" alt="email" />
+      </div>
+      </a>
+    </section>
+    <section>
+      <div id="copyright" />
+    </section>
+  </main>
 </body>
+
 </html>
