add better html icon

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <img src="assets/git.svg" alt="Git" />
         </div>
         <div>
-          <img src="assets/html5.svg" alt="HTML5" />
+          <img src="assets/html.svg" alt="HTML5" />
           <img src="assets/css3.svg" alt="CSS3" />
           <img src="assets/postgresql.svg" alt="PostgreSQL" />
           <img src="assets/rspec.png" alt="RSpec" />
