--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       gtag("config", "UA-107752770-1");
     </script>
   <title>Lindsay Dages</title>
+  <link rel='shortcut icon' type='image/png' href='favicon.png' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="assets/coder.png" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
