add tool name to titles

--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@
       <h2>Tools I Use</h2>
       <div class="tools-container">
         <div>
-          <img src="assets/rails.svg" alt="Ruby On Rails" title="Optimized for programmer happiness" />
+          <img src="assets/rails.svg" alt="Ruby On Rails" title="Ruby On Rails: Optimized for programmer happiness" />
           <div>
-            <img src="assets/react.svg" alt="React" title="Makes creating interactive UIs less painful" />
-            <img src="assets/graphql.svg" alt="GraphQL" title="Gives clients the power to ask for exactly what they need and nothing more" />
-            <img src="assets/typescript.svg" alt="TypeScript" title="Emits clean, idiomatic, recognizable JavaScript code" />
+            <img src="assets/react.svg" alt="React" title="React: Makes creating interactive UIs less painful" />
+            <img src="assets/graphql.svg" alt="GraphQL" title="GraphQL: Gives clients the power to ask for exactly what they need and nothing more" />
+            <img src="assets/typescript.svg" alt="TypeScript" title="TypeScript: Emits clean, idiomatic, recognizable JavaScript code" />
           </div>
-          <img src="assets/git.svg" alt="Git" title="Commit early and often and DON'T PANIC" />
+          <img src="assets/git.svg" alt="Git" title="Git: Commit early and often and DON'T PANIC" />
         </div>
         <div>
-          <img src="assets/html.svg" alt="HTML5" title="Allows authors describe more precisely what their content is" />
-          <img src="assets/css3.svg" alt="CSS3" title="Lets authors write more sophisticated themes" />
-          <img src="assets/postgresql.svg" alt="PostgreSQL" title="Helps manage your data no matter how big or small the dataset" />
-          <img src="assets/rspec.png" alt="RSpec" title="Makes TDD Productive and Fun" />
+          <img src="assets/html.svg" alt="HTML5" title="HTML5: Allows authors describe more precisely what their content is" />
+          <img src="assets/css3.svg" alt="CSS3" title="CSS3: Lets authors write more sophisticated themes" />
+          <img src="assets/postgresql.svg" alt="PostgreSQL" title="PostgreSQL: Helps manage your data no matter how big or small the dataset" />
+          <img src="assets/rspec.png" alt="RSpec" title="RSpec: Makes TDD Productive and Fun" />
         </div>
       </div>
     </section>
