--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
   <link rel='shortcut icon' type='image/png' href='favicon.png' />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
   <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="index.css" />
   <meta name="“keywords”" content="“lindsay,dages,dutton,Lindsay”" />
-  <meta name="description" content="Lindsay Dages: Web Developer Portfolio" />
+  <meta name="description" content="Lindsay Dages: Web Developer" />
   <script src="index.js"></script>
 </head>
 
