--- a/index.html
+++ b/index.html
@@ -54,20 +54,38 @@
     <section>
       <h2>Tools I Use</h2>
       <div class="tools-container">
-        <div>
-          <img src="assets/rails.svg" alt="Ruby On Rails" title="Ruby On Rails: Optimized for programmer happiness" />
-          <div>
-            <img src="assets/react.svg" alt="React" title="React: Makes creating interactive UIs less painful" />
-            <img src="assets/graphql.svg" alt="GraphQL" title="GraphQL: Gives clients the power to ask for exactly what they need and nothing more" />
-            <img src="assets/typescript.svg" alt="TypeScript" title="TypeScript: Emits clean, idiomatic, recognizable JavaScript code" />
+        <div class="row">
+          <div class="tooltip" data-tooltip="Ruby On Rails: Optimized for programmer happiness">
+            <img src="assets/rails.svg" alt="Ruby On Rails" />
           </div>
-          <img src="assets/git.svg" alt="Git" title="Git: Commit early and often and DON'T PANIC" />
+
+          <div class="tooltip" data-tooltip="React: Makes creating interactive UIs less painful">
+            <img src="assets/react.svg" alt="React" />
+          </div>
+          <div class="tooltip" data-tooltip="GraphQL: Gives clients the power to ask for exactly what they need and nothing more">
+            <img src="assets/graphql.svg" alt="GraphQL" />
+          </div>
+          <div class="tooltip" data-tooltip="TypeScript: Emits clean, idiomatic, recognizable JavaScript code">
+            <img src=" assets/typescript.svg" alt="TypeScript" />
+          </div>
+
+          <div class="tooltip" data-tooltip="Git: Commit early and often and DON'T PANIC">
+            <img src=" assets/git.svg" alt="Git" />
+          </div>
         </div>
-        <div>
-          <img src="assets/html.svg" alt="HTML5" title="HTML5: Allows authors describe more precisely what their content is" />
-          <img src="assets/css3.svg" alt="CSS3" title="CSS3: Lets authors write more sophisticated themes" />
-          <img src="assets/postgresql.svg" alt="PostgreSQL" title="PostgreSQL: Helps manage your data no matter how big or small the dataset" />
-          <img src="assets/rspec.png" alt="RSpec" title="RSpec: Makes TDD Productive and Fun" />
+        <div class="row">
+          <div class="tooltip" data-tooltip="HTML5: Allows authors describe more precisely what their content is">
+            <img src="assets/html.svg" alt="HTML5" />
+          </div>
+          <div class="tooltip" data-tooltip="CSS3: Lets authors write more sophisticated themes">
+            <img src="assets/css3.svg" alt="CSS3" />
+          </div>
+          <div class="tooltip" data-tooltip="PostgreSQL: Helps manage your data no matter how big or small the dataset">
+            <img src="assets/postgresql.svg" alt="PostgreSQL" />
+          </div>
+          <div class="tooltip" data-tooltip="RSpec: Makes TDD Productive and Fun">
+            <img src="assets/rspec.png" alt="RSpec" />
+          </div>
         </div>
       </div>
     </section>
