--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="tooltip" data-tooltip="HTML5: Allows authors describe more precisely what their content is">
+          <div class="tooltip" data-tooltip="HTML5: Allows authors to describe more precisely what their content is">
             <img src="assets/html.svg" alt="HTML5" />
           </div>
           <div class="tooltip" data-tooltip="CSS3: Lets authors write more sophisticated themes">
